add notification function for env analysis
