# pkg/microservice/aslan/server/rest/doc/swagger.json
@@ -287,6 +287,15 @@
                         "name": "projectName",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.EnvAnalysisCronArg"
+                        }
                     }
                 ],
                 "responses": {
@@ -848,6 +857,15 @@
                         "name": "projectName",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.EnvAnalysisCronArg"
+                        }
                     }
                 ],
                 "responses": {
@@ -2423,12 +2441,10 @@
         "models.NotificationEvent": {
             "type": "string",
             "enum": [
-                "notification_event_env_change",
                 "notification_event_analyzer_normal",
                 "notification_event_analyzer_abnormal"
             ],
             "x-enum-varnames": [
-                "NotificationEventEnvChange",
                 "NotificationEventAnalyzerNoraml",
                 "NotificationEventAnalyzerAbnormal"
             ]
@@ -3037,6 +3053,17 @@
                     "items": {
                         "$ref": "#/definitions/service.DeployableEnv"
                     }
+                }
+            }
+        },
+        "service.EnvAnalysisCronArg": {
+            "type": "object",
+            "properties": {
+                "cron": {
+                    "type": "string"
+                },
+                "enable": {
+                    "type": "boolean"
                 }
             }
         },
